--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "mocha",
+    "lint": "./node_modules/eslint/bin/eslint.js src/**.js test/**.js"
   },
   "author": "Turing School of Software and Design",
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.1.4"
+  },
+  "dependencies": {
+    "eslint": "^5.16.0"
   }
 }
