--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mocha": "^6.1.4"
   },
   "dependencies": {
-    "eslint": "^5.16.0"
+    "eslint": "^5.16.0",
+    "jquery": "^3.4.1"
   }
 }
